# wb-slide

./: .gitignore  Cargo.toml  DESIGN-GUIDE-BROCHURE.md  DESIGN-GUIDE.md  README.ko.md  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  slides.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: architecture.md  layouts.md  registry-design.md  slide-format.md  styling.md  theme-contract.md
framework/: monocle-slide.js  print.css  slide-base.js  theme.css  utilities.css
framework/layouts/: slide-contact.js  slide-cover.js  slide-default.js  slide-feature.js  slide-image-full.js  slide-quote.js  slide-section.js  slide-two-column.js
layouts/: contact.vue  feature.vue  section-divider.vue
src/: main.rs  theme.rs
styles/: custom.css  index.css
