[package]
name = "wb-slide"
version = "0.1.0"
edition = "2021"
description = "Lightweight slide presentation framework powered by Web Components and Rust"
license = "MIT"
repository = "https://github.com/warmblood-kr/wb-slide"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
open = "5"
clap = { version = "4", features = ["derive"] }
rust-embed = "8"
mime_guess = "2"
comrak = { version = "0.35", default-features = false, features = ["syntect"] }
serde_json = "1"
