[package]
name = "monocle-slide"
version = "0.1.0"
edition = "2024"
description = "Lightweight slide presentation framework"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
open = "5"
clap = { version = "4", features = ["derive"] }
rust-embed = "8"
mime_guess = "2"
comrak = { version = "0.35", default-features = false, features = ["syntect"] }
serde_json = "1"
